[package]
name = "uluru"
version = "1.0.0"
authors = ["The Servo Project Developers", "Matt Brubeck <mbrubeck@limpet.net>"]
license = "MPL-2.0"
description = "A simple, fast, LRU cache implementation"
repository = "https://github.com/servo/uluru"
keywords = ["cache", "linkedlist", "array", "no_std"]
categories = ["data-structures", "no-std"]
readme = "README.md"

[lib]
name = "uluru"
path = "lib.rs"

[dependencies.arrayvec]
git = "https://github.com/mbrubeck/arrayvec"
branch = "min-const-gen"
default-features = false
features = ["unstable-const-generics"]

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
