[package]
name = "uluru"
version = "2.1.1"
authors = ["The Servo Project Developers", "Matt Brubeck <mbrubeck@limpet.net>"]
license = "MPL-2.0"
description = "A simple, fast, LRU cache implementation"
repository = "https://github.com/servo/uluru"
keywords = ["cache", "linkedlist", "array", "no_std"]
categories = ["data-structures", "no-std"]
readme = "README.md"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
